templates/default/styles.css
/* ... */
#toolbartop a:hover, #toolbarbottom a:hover {
	background-image: url(gfx/button_reverse.png);
	background-color: #FFF;
	border-top: 1px solid #369;
	border-left: 1px solid #369;
	border-bottom: 1px solid #99b2cc;
	border-right: 1px solid #99b2cc;
}
#pagelinkstop {
	float: left;
	line-height: 23px;
	font-weight: bold;
	margin: 0 0 6px 0;
}
.topicname {
	font-size: 9pt;
}
.topicpagelinks {
	float: right;
	text-align: right;
	color: #444;
	white-space: pre;
	padding: 0 0 0 10px;
}
#toolbarbottom {
	float: right;
	line-height: 23px;
	text-align: right;
	margin: -14px 0 0 0;
}
#pagelinksbottom {
	float: left;
	line-height: 23px;
	font-weight: bold;
	margin: -14px 0 0 0;
}
#bottomfix {
	clear: both;
	height: 20px;
}
.author {
	clear: left;
	padding: 2px 0 0 3px;
	color: #444;
}
.author a {
	text-decoration: none;
	color: #444;
}

/* Topic styles */

table.maintable tr.tr1 td {
	background-color: #EFEFEF;
}
table.maintable tr.tr2 td {
	background-color: #E8E8E8;
}
table.maintable td.postername {
	text-align: center;
	font-size: 10pt;
	font-weight: bold;
	width: 135px;
	height: 1%;
}
table.maintable td.postername .posternamecontainer {	
	overflow: hidden;
	width: 135px;
}
table.maintable td.postinfo {
	vertical-align: middle;
}
table.maintable td.postinfo .postdate {
	color: #444;
}
table.maintable td.postinfo .postlinks {
	float: right;
	font-weight: bold;
	color: #999;
}
table.maintable td.posterinfo {
	vertical-align: top;
	text-align: center;
	width: 135px;
}
table.maintable td.posterinfo .avatar {
	margin-top: 10px;
}
table.maintable td.posterinfo .avatar img {
	margin-bottom: 10px;
}
table.maintable td.posterinfo .field {
	color: #444;
}
table.maintable td.postcontent {
	vertical-align: top;
}
table.maintable td.postcontent .post {
	width: 564px;
	overflow: auto;
	font-size: 10pt;
	cursor: auto;
}
table.maintable td.postcontent .signature {
	color: #444;
	font-size: 8pt;
}
table.maintable td.postcontent .editinfo {
	margin: 5px 0 0 0;
	border-top: 1px solid silver;
	padding: 5px 0 0 0;
	color: #444;
	font-size: 8pt;
	font-style: italic;
}
table.maintable td.postcontent .poster-ip-addr {
	color: #666;
	font-size: 7pt;
	text-align: right;
	padding: 5px 0 0 0;
}
table.maintable td.postcontent .poster-ip-addr a {
	text-decoration: none;
}
table.maintable td.posterinfo, table.maintable td.postcontent {
	border-bottom: 4px solid #D8D8D8;
}
#actionlinks {
	color: #323232;
	text-align: left;
	padding: 3px;
	margin-bottom: 10px;
	margin-top: -10px;
	font-size: 7pt;
}

/* FAQ styles */

table.maintable td#faq-contents {
	font-size: 10pt;
}
table.maintable td#faq-contents h3 {
	font-size: 10pt;
	font-weight: bold;
	margin: 0 0 10px 0;
}
table.maintable td#faq-contents ul {
	margin: 0 0 10px 30px;
}
table.maintable td#question {
	font-size: 10pt;
	padding: 12px !important;
}

/* Active topics styles */

table.maintable td.atforum {
	font-size: 7pt;
	width: 1%;
}

/* Stats styles */

table.maintable td.statstitle {
	background-color: #E8E8E8;
	font-weight: bold;
	width: 1%;
	white-space: nowrap;
}
table.statslayout {
	width: 100%;
	border-collapse: collapse;
}
table.statslayout td {
	width: 50%;
	vertical-align: top;
	padding: 0 20px 0 0;
}
table.statslayout td.last {
	padding: 0;
}

/* */

table.confirmform td.msg, td.msg {
	padding: 18px 36px 18px 36px !important;
	font-size: 10pt;
}
table.maintable td.minimal {
	background-color: #E8E8E8;
	width: 1%;
	white-space: nowrap;
	text-align: center;
}
table.maintable td.avatar-field {
	background-color: #E8E8E8;
	width: 80px;
	text-align: center;
}
#pagelinksothertop {
	text-align: left;
	font-weight: bold;
	margin: 0 0 10px 0;
}
#pagelinksotherbottom {
	text-align: left;
	font-weight: bold;
	margin: -10px 0 20px 0;
}
#pagelinkstop strong, #pagelinksbottom strong, #pagelinksothertop strong, #pagelinksotherbottom strong {
	padding: 1px 2px 1px 2px;
	border: 1px solid silver;
	background-color: #EFEFEF;
}
ul#panelmenu {
	list-style: none;
	margin: 0 0 10px 0;
	padding: 5px;
	text-align: center;
	background-color: #EFEFEF;
	border: 1px solid silver;
	color: #333;
}
ul#panelmenu li {
	display: inline;
	padding: 0 10px 0 10px;
	border-left: 2px solid silver;
}
ul#panelmenu li#first {
	border-left: 0;
}
p#linkbar {
	color: #323232;
	text-align: center;
	margin-bottom: 20px;
}
p#linkbar a {
	margin: 0 2px 0 2px;
}
p#linkbar #rss-feed-icon {
	margin: 0 1px 0 3px;
}
p#linkbar #rss-feed-icon img {
	vertical-align: middle;
}
.jump-in-data {
	color: #666;
	margin-left: 10px;
}
.moreinfo {
	padding-top: 3px;
	color: #333;
}
.results-posts-post-info td {
	background-color: #E8E8E8 !important;
}
.results-posts-post-date {
	float: right;
}
.results-posts-post-content td {
	border-top: 0 !important;
	border-bottom: 2px solid #c7c3c7;
}
.results-posts-post-content div {
	line-height: 150%;
	color: #333;
	height: 48px;
	overflow: hidden;
}

#bbcode-controls, #smiley-controls {
	list-style: none;
}
#bbcode-controls li, #smiley-controls li {
	display: inline;
}

#bbcode-controls {
	padding: 4px 3px 4px 3px;
	background-color: #FFF;
	background-image: url(gfx/bbcode_bg.png);
	background-position: bottom;
	background-repeat: repeat-x;
	border: 1px solid #d7cbbe;
	border-top: 0;
	margin: 0 0 3px 0;
}
#bbcode-controls li a {
	padding: 2px 6px 2px 6px;
	margin: 0 2px 0 0;
	text-decoration: none;
	color: #333 !important;
	cursor: default !important;
}
#bbcode-controls li a:hover {
	padding: 2px 5px 2px 5px;
	background-color: #dae2e4;
	border: 1px solid #2058b9;
}
#smiley-controls {
	margin: 3px 0 0 0;
}
#smiley-controls li {
	margin: 0 2px 0 0;
}

#post-options input, #post-options label {
	margin: 5px 0 0 0;
}

table#spamquestion {
	clear: both;
	margin: 0px auto 20px auto;
	width: 67%;
}

#bottom {
	clear: both;
	float: left;
	width: 705px;
	padding: 3px 9px 3px 9px;
	background-image: url(gfx/topmenu_bg.png);
	background-repeat: repeat-x;
	background-color: #E8E8E8;
	border: 1px solid #369;
	font-style: normal;
	text-align: right;
	color: #333;
}
/* ... */

